<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BlutoothChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="theme_search_button">搜索对象</string>
    <string name="theme_title_textview">聊天界面</string>
    <string name="theme_background_buttton">设置背景</string>
    <string name="face">表情</string>
    <string name="sendMsg_EditText_hint">输入聊天内容</string>
    <string name="sendMsg_Button_text">发送</string>
    <string name="bt_not_enabled_leaving">蓝牙服务未开启，退出中。。。</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="title_connecting">connecting...</string>
    <string name="not_connected">You are not connected to a device</string>
    <!-- Options Menu -->
    <string name="send_file"></string>
    <string name="insecure_connect">搜索对象</string>
    <string name="discoverable">标记自己</string>
    <string name="startService">打开蓝牙</string>
    <!-- DeviceListActivity -->
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">搜索对方</string>
    <string name="select_device">寻找连接设备</string>
    <string name="none_found">No devices found</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
</resources>