<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_search_button"
        android:layout_marginLeft="5dp"
        android:background="@drawable/titlebuttonback"
        />
    <TextView android:id="@+id/theme_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:text="@string/theme_title_textview"
        android:layout_weight="1"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/bag_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:text="@string/theme_background_buttton"
        android:background="@drawable/titlebuttonback"
        />
</LinearLayout>